--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,9 @@
 PORT=3000
+MONGO_URI=
+JWT_SECRET_KEY=
+EMAIL=
+MAILTRAP_HOST=
+MAILTRAP_PORT=
+MAILTRAP_USER=
+MAILTRAP_PASSWORD=
+URL=http://localhost:3000
