.env.sample updated

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ MAILTRAP_PORT=
 MAILTRAP_USER=
 MAILTRAP_PASSWORD=
 URL=http://localhost:3000
+
+BREVO_HOST=
+BREVO_PORT=
+BREVO_USER=
+BREVO_PASSWORD=
