--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sebanti & Himadri",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
